Fix broken images in inline css

--- a/themes/wilks/static/css/src/base/_util.scss
+++ b/themes/wilks/static/css/src/base/_util.scss
@@ -17,7 +17,7 @@
 .button--twitter {
   color: #FFF;
   background-color: #1da1f2;
-  background-image: url("../images/twitter-icon.svg");
+  background-image: url("/images/twitter-icon.svg");
   background-repeat: no-repeat;
   background-position: left 2rem center;
   padding-left: 6rem;
