--- a/themes/wilks/static/css/src/layout/_articles.scss
+++ b/themes/wilks/static/css/src/layout/_articles.scss
@@ -163,7 +163,7 @@
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  background-image: url("../images/icon-tag.svg");
+  background-image: url("/images/icon-tag.svg");
   background-position: top 0.25rem left;
   background-repeat: no-repeat;
   background-size: 1.5rem auto;
@@ -184,7 +184,7 @@
 }
 
 .teaser__date {
-  background-image: url("../images/icon-cal.svg");
+  background-image: url("/images/icon-cal.svg");
   background-position: left center;
   background-repeat: no-repeat;
   background-size: 1.5rem auto;
