--- a/themes/wilks/layouts/_default/baseof.html
+++ b/themes/wilks/layouts/_default/baseof.html
@@ -19,6 +19,23 @@
 			{{ block "main" . }}{{ end }}
 		</main>
 		{{ partial "footer" . }}
+		<script>
+			WebFontConfig = {
+				google: {
+					api: 'https://fonts.googleapis.com/css2',
+					families: ['Quicksand:wght@500..700:latin&display=swap']
+				},
+				timeout: 2000
+			};
+			(function () {
+				var wf = document.createElement('script');
+				wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+				wf.type = 'text/javascript';
+				wf.async = 'true';
+				var s = document.getElementsByTagName('script')[0];
+				s.parentNode.insertBefore(wf, s);
+			})();
+		</script>
 		<script src="{{ "scripts/main.js" | relURL }}"></script>
 	</body>
 </html>
