--- a/themes/wilks/static/css/src/layout/_articles.scss
+++ b/themes/wilks/static/css/src/layout/_articles.scss
@@ -116,10 +116,8 @@
   border-top-right-radius: 0.5rem;
   margin-bottom: 3rem;
 
-  img {
+  svg {
     height: 4rem;
-    max-width: none;
-    width: auto;
     display: block;
   }
 }
