--- a/themes/wilks/static/css/src/base/_typography.scss
+++ b/themes/wilks/static/css/src/base/_typography.scss
@@ -35,7 +35,7 @@ h1 {
 
 h2 {
   font-size: var(--font-size-h2);
-  font-weight: $font-weight-bold;
+  font-weight: $font-weight-semi-bold;
 }
 
 h3 {
