Remove animation from main header

--- a/themes/wilks/layouts/index.html
+++ b/themes/wilks/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 {{ if .IsHome }}
-<div class="banner banner--front animate">
+<div class="banner banner--front">
   <h1 class="banner__title">I am a front-end web developer &amp; Drupal specialist based in sunny Manchester.</h1>
   <p class="banner__intro">I've been tinkering with all things web since 2005.</p>
   <a class="button" href="/about" title="More about Tom Wilks">More about me</a>
