--- a/themes/wilks/layouts/partials/other-work.html
+++ b/themes/wilks/layouts/partials/other-work.html
@@ -1,5 +1,5 @@
 <section class="section section--work section--latest animate fadein">
-  <h2 class="section__heading">Other Work <a href="/work" class="section__button">View all</a></h2>
+  <h2 class="section__heading">Other Work <a href="/work/" class="section__button">View all</a></h2>
   <ol class="post-list">
     {{ range ( first 3 ( where .Site.RegularPages "Section" "work" ) ) }}
     <li class="post-list__item">{{ .Render "summary" }}</li>
