Fix schema image link

--- a/themes/wilks/layouts/articles/single.html
+++ b/themes/wilks/layouts/articles/single.html
@@ -24,7 +24,7 @@
       "@id": "{{ .Permalink }}"
     },
     "headline": "{{ .Title }}",
-    "image": "{{ .Site.BaseURL }}images/favicon.svg",
+    "image": "{{ .Site.BaseURL }}/images/favicon.svg",
     "author": {
       "@type": "Person",
       "name": "Tom Wilks"
@@ -34,7 +34,7 @@
       "name": "Tom Wilks",
       "logo": {
         "@type": "ImageObject",
-        "url": "{{ .Site.BaseURL }}images/favicon.svg"
+        "url": "{{ .Site.BaseURL }}/images/favicon.svg"
       }
     },
     "datePublished": "{{ .Date }}"
