Fix twitter handle

--- a/themes/wilks/layouts/partials/meta.html
+++ b/themes/wilks/layouts/partials/meta.html
@@ -23,5 +23,5 @@
 <meta property="og:url" content="{{ .Permalink }}" />
 <meta property="og:image" content="{{ "images/share.png" | absURL }}" />
 <meta property="og:site_name" content="{{ .Site.Params.Title }}">
-<meta name="twitter:site" content="@thebrainroom">
+<meta name="twitter:site" content="@wilksdotco">
 <meta name="twitter:image:alt" content="Image for {{ .Title }}">
